--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -2,6 +2,8 @@
 "leaflet/dist/leaflet",
 "leaflet.markercluster/dist/MarkerCluster.Default",
 "leaflet.markercluster/dist/MarkerCluster",
+"sidebar-v2/scss/leaflet-sidebar",
+"font-awesome/scss/font-awesome",
 "geocoder",
 "map"
 ;
