Added Sentry DB link

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -6,5 +6,11 @@
 "font-awesome/scss/font-awesome",
 "geocoder",
 "map",
-"leaflet-awesome-markers"
+"leaflet-awesome-markers",
+"humane-js/themes/bigbox",
+"humane-js/themes/boldlight",
+"humane-js/themes/flatty",
+"humane-js/themes/jackedup",
+"humane-js/themes/libnotify",
+"humane-js/themes/original"
 ;
