--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -14,3 +14,9 @@
 "humane-js/themes/libnotify",
 "humane-js/themes/original"
 ;
+
+$font-stack: "Helvetica Neue", Arial, Helvetica, sans-serif;
+
+body {
+  font: 12px/1.5 $font-stack;
+}
